2007-07-31  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-stage.[ch]: Fix clutter_stage_set_user_resizable()
	name, and add a getter for the property.

	* clutter/glx/clutter-stage-glx.c: Use the accessor, not
	g_object_get() to retrieve the value of the resizable property.

2007-07-31  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-backend.[ch]: Add clutter_backend_set_resolution()
	and clutter_backend_get_resolution(); backends should use the former
	to set the resolution of the display when initialising, while actors
	should use the latter when sizing themselves depending on the
	resolution or the font size.

	* clutter/glx/clutter-backend-glx.c: Set the resolution as 96 dpi
	as a default and query the X server when opening the display.

	* clutter/clutter-entry.c: Drop the hardcoded dpi value and use
	clutter_backend_get_resolution() to compute the default size.

2007-07-31  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-entry.c (clutter_entry_init): Set the default
	size of the entry based on the size of the default font. (#414).

2007-07-31  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/sdl/clutter-backend-sdl.c: Fix a typo in
	clutter_backend_sdl_get_features() (#426, Pan Bohui)

2007-07-30  Matthew Allum  <mallum@openedhand.com>

	* AUTHORS:
	* HACKING:
	* README:
	Various updates and improvements.

	* configure.ac:
	Remove --disable-fast-fp-conversions

2007-07-30  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-behaviour-ellipse:
	(clutter_behaviour_ellipse_advance):

	Fixed invalid assumption about z cooordiance in calculation of
	tilt in y axis.
	
2007-07-30  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:

	Fixed incorrect order of modelview matrix stack in calculating
	actor vertices.

2007-07-30  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-backend.h:
	Remove #if 0's old backend_api 
	(generating uneeded documentation)
